Change padding top on header container in media query to fix gap bug

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -558,7 +558,7 @@ input[name="q"]::placeholder {
 /* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
   .header-container {
-    padding-top: 116px;
+    padding-top: 82px;
   }
 
   body {
